# voxlconsl

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/workflows/: deploy-pages.yml
crates/audio/: Cargo.toml
crates/audio-worklet/: Cargo.toml
crates/audio-worklet/src/: lib.rs
crates/audio/src/: audio.rs  audio_fx.rs  audio_patch_blob.rs  audio_section.rs  lib.rs  smf.rs
crates/bundler/: Cargo.toml
crates/bundler/src/: audio.rs  lib.rs  materials.rs  wav.rs
crates/cli/: Cargo.toml
crates/cli/src/: balance.rs  main.rs
crates/host/: Cargo.toml
crates/host-browser/: Cargo.toml
crates/host-browser/src/: lib.rs
crates/host/src/: actors.rs  audio.rs  audio_events.rs  bodies.rs  ca.rs  input.rs  lib.rs  macro_grid.rs  palette.rs  physics.rs  prefabs.rs  renderer.rs  runtime.rs  sandbox.rs  world.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: animation.rs  audio.rs  bodies.rs  ca.rs  lib.rs  physics.rs  text.rs
crates/sdk/src/fonts/: ansi_regular.vfnt  delta_corps_priest_1.vfnt  tiny.vfnt
crates/svo/: Cargo.toml
crates/svo/src/: build.rs  lib.rs  ray.rs
crates/types/: Cargo.toml
crates/types/src/: actor.rs  audio.rs  camera.rs  cart_format.rs  input.rs  lib.rs  material.rs  math.rs  physics.rs
docs/: book.toml
docs/src/: SUMMARY.md  concepts.md  crates.md  emulator.md  hello-cube.md  introduction.md  project-layout.md  quick-start.md  roadmap.md  sdk.md
docs/theme/: voxlconsl.css
examples/: README.md
examples/big-world/: Cargo.toml  README.md  cart.toml  materials.toml
examples/big-world/audio/: build_assets.py  patches.toml
examples/big-world/audio/songs/: groove.mid
examples/big-world/src/: audio.rs  body_demo.rs  embers.rs  lib.rs  mathlib.rs  player.rs  terrain.rs
examples/hello-cube/: Cargo.toml  README.md  cart.toml
examples/hello-cube/src/: lib.rs
examples/ic/: Cargo.toml  cart.toml  materials.toml
examples/ic/audio/: patches.toml
examples/ic/audio/songs/: firefighter_theme.mid
examples/ic/src/: action_wheel.rs  audio.rs  balance.rs  camera.rs  cursor.rs  engine.rs  fire.rs  hotshot.rs  hud.rs  lib.rs  lightning.rs  line_mode.rs  mathlib.rs  queue_markers.rs  retardant_aim.rs  rng.rs  scenario.rs  season.rs  story.rs  terrain.rs  title.rs  units.rs  water.rs
examples/voxdude/: Cargo.toml  README.md  cart.toml  materials.toml  maze_check.py
examples/voxdude/audio/: patches.toml  preprocess_song.py
examples/voxdude/audio/songs/: voxel-synapse.mid
examples/voxdude/src/: audio.rs  ghosts.rs  hud.rs  lib.rs  maze.rs  particles.rs  player.rs  rng.rs
scripts/: build-web.sh  build_tiny_font.py  dev-server.py  flf_to_vfnt.py
web/: audio-worklet.js  index.html  main.js  style.css  sw.js
