[package]
name = "voxlconsl-cli"
description = "The voxlconsl command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "voxlconsl"
path = "src/main.rs"

[dependencies]
voxlconsl-bundler = { workspace = true }
voxlconsl-host = { workspace = true }
clap = { workspace = true }
