[package]
name = "voxlconsl-host-browser"
description = "Browser host for voxlconsl — the reference implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
voxlconsl-types = { workspace = true }
voxlconsl-svo = { workspace = true }
voxlconsl-host = { workspace = true }
wasm-bindgen = "=0.2.100"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

# Optimize for size in the WASM build.
[package.metadata.wasm-opt]
optimize_level = "s"
