[package]
name = "voxlconsl-host"
description = "Runtime for voxlconsl carts: ray marcher, physics, audio, WASM sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
voxlconsl-types = { workspace = true, features = ["bytemuck"] }
voxlconsl-svo = { workspace = true }
voxlconsl-audio = { workspace = true }
bytemuck = { workspace = true }
wasmi = { version = "0.50", default-features = false }
