[package]
name = "voxlconsl-sdk"
description = "Cart-side SDK for voxlconsl — host bindings and cart-author ergonomics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
voxlconsl-types = { workspace = true }
