[package]
name = "big-world"
description = "Renderer stress test — 512×512 noise terrain with trees and a player"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
voxlconsl-sdk = { workspace = true }
