[package]
name = "hello-cube"
description = "A first voxlconsl cart — chequered ground, voxel tree, ruby cap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
voxlconsl-sdk = { workspace = true }
