[package]
name = "ic"
description = "Incident Command — an RTS wildfire-fighting sim built on voxlconsl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
voxlconsl-sdk = { workspace = true }
