[package]
name = "voxdude"
description = "A voxel pacman clone — eat dots, dodge ghosts, grab power pellets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
voxlconsl-sdk = { workspace = true }
